inclusao de seletor de spray

--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
         </section>
         
         <section>
-            <nav class="seletor">
+            <div class="seletor">
                 <h2 style="font-size: 1.7em;">Spray</h2>
-                <button type="button" class="botao" id="robotron__cor-vermelho"><img src="./img/Robotron2000-Vermelho/Robotron 2000 - Vermelho.png" height="50" width="50"></button>
-                <button type="button" class="botao" id="robotron__cor-azul"><img src="./img/Robotron2000-Azul/Robotron 2000 - Azul.png" height="50" width="50"></button>
-                <button type="button" class="botao" id="robotron__cor-amarelo"><img src="./img/Robotron2000-Amarelo/Robotron 2000 - Amarelo.png" height="50" width="50"></button>
-                <button type="button" class="botao" id="robotron__cor-branco"><img src="./img/Robotron2000-Branco/Robotron 2000 - Branco.png" height="50" width="50"></button>
-                <button type="button" class="botao" id="robotron__cor-preto"><img src="./img/Robotron2000-Preto/Robotron 2000 - Preto.png" height="50" width="50"></button>
-                <button type="button" class="botao" id="robotron__cor-rosa"><img src="./img/Robotron2000-Rosa/Robotron 2000 - Rosa.png" height="50" width="50"></button>
-            </nav>
+                <button class="botao" id="Vermelho"></button>
+                <button class="botao" id="Azul"></button>
+                <button class="botao" id="Amarelo"></button>
+                <button class="botao" id="Branco"></button>
+                <button class="botao" id="Preto"></button>
+                <button class="botao" id="Rosa"></button>
+            </div>
         </section>
 
     </main>
